initial commit: grid template areas

--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
         /* margin: 5rem; */
         /* height: 90vh; */
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
+        /* grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
         grid-template-areas:
           "a a b"
           "a a b"
           "c c b"
           "d d d"
-          "e f f";
+          "e f f"; */
+
         /* grid-template-columns: [start] 1fr 1fr [beforeend] 1fr [end]; */
         /* grid-template-rows: [start] 1fr 1fr 1fr [end]; */
         /* grid-column-gap: 50px; */
@@ -30,7 +31,7 @@
         /* grid-gap: 50px; */
       }
 
-      .cell-1 {
+      /* .cell-1 {
         grid-area: a;
       }
 
@@ -52,7 +53,7 @@
 
       .cell-6 {
         grid-area: f;
-      }
+      } */
 
       /* .cell-1 {
         grid-column: 1/3;
