second commit : grid template area has been finished

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
         /* margin: 5rem; */
         /* height: 90vh; */
         display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+        grid-template-areas:
+          "a a b"
+          "a a b"
+          "c c b"
+          "d d d"
+          "e f f";
         /* grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
         grid-template-areas:
@@ -29,6 +37,30 @@
         /* column-gap: 50px; */
         /* row-gap: 50px; */
         /* grid-gap: 50px; */
+      }
+
+      .cell-1 {
+        grid-area: a;
+      }
+
+      .cell-2 {
+        grid-area: b;
+      }
+
+      .cell-3 {
+        grid-area: c;
+      }
+
+      .cell-4 {
+        grid-area: d;
+      }
+
+      .cell-5 {
+        grid-area: e;
+      }
+
+      .cell-6 {
+        grid-area: f;
       }
 
       /* .cell-1 {
